# TaxChat

./: .gitignore  QUICKSTART.md  README.md  constants.py  main.py  pyproject.toml  requirements.txt  run_chat.sh
src/: agentic_chunker.py  chat_interface.py  document_loader.py  embeddings_manager.py  retrieval_system.py
